# cookiecutter-typer-cli

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_slug}}/: .gitignore  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: test.yml
{{cookiecutter.project_slug}}/tests/: test_hello.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: app.py  config.py
